--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -80,7 +80,7 @@
             <ImageButton
                 android:id="@+id/carButton"
                 android:layout_width="0dp"
-                android:layout_height="160dp"
+                android:layout_height="120dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginBottom="4dp"
@@ -93,7 +93,7 @@
             <ImageButton
                 android:id="@+id/bike"
                 android:layout_width="0dp"
-                android:layout_height="160dp"
+                android:layout_height="120dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginBottom="4dp"
@@ -115,7 +115,7 @@
                 android:src="@drawable/sent"
                 android:id="@+id/sent"
                 android:layout_width="0dp"
-                android:layout_height="160dp"
+                android:layout_height="120dp"
                 android:layout_marginRight="4dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginTop="4dp"
@@ -127,7 +127,7 @@
                 android:background="@drawable/layout_background"
                 android:id="@+id/received"
                 android:layout_width="0dp"
-                android:layout_height="160dp"
+                android:layout_height="120dp"
                 android:layout_marginLeft="4dp"
                 android:layout_marginTop="4dp"
                 android:layout_marginRight="8dp"
@@ -145,7 +145,7 @@
                 android:background="@drawable/layout_background"
                 android:id="@+id/editDetails"
                 android:layout_width="0dp"
-                android:layout_height="160dp"
+                android:layout_height="120dp"
                 android:layout_marginRight="4dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginTop="4dp"
@@ -154,11 +154,11 @@
                 android:layout_weight="1" />
 
             <ImageButton
-                android:id="@+id/logout"
+                android:id="@+id/myasset"
                 android:src="@drawable/logout"
                 android:background="@drawable/layout_background"
                 android:layout_width="0dp"
-                android:layout_height="160dp"
+                android:layout_height="120dp"
                 android:layout_marginLeft="4dp"
                 android:layout_marginTop="4dp"
                 android:layout_marginRight="8dp"
@@ -166,6 +166,17 @@
                 android:layout_weight="1" />
 
         </LinearLayout>
+        <ImageButton
+            android:id="@+id/logout"
+            android:src="@drawable/logout"
+            android:background="@drawable/layout_background"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginLeft="4dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="8dp"
+            android:layout_weight="1" />
     </LinearLayout>
 </ScrollView>
 
